--- a/package.json
+++ b/package.json
@@ -27,22 +27,39 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.3",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "classnames": "^2.2.5",
     "codecov": "^3.0.0",
     "debug": "^3.1.0",
     "enhanced-resolve": "^4.0.0",
     "eslint": "^4.18.1",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "jest": "^22.4.2",
     "js-cookie": "^2.2.0",
     "materialize-css": "^1.0.0-beta",
     "materialize-loader": "^2.0.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-each": "^0.10.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.4",
+    "postcss-mixins": "^6.2.0",
+    "prop-types": "^15.6.1",
+    "react": "^15.6",
+    "react-css-themr": "^2.1.2",
+    "react-dom": "15",
+    "react-toolbox": "^2.0.0-beta.12",
+    "react-transition-group": "^1.1",
     "sauce-connect-launcher": "^1.2.4",
     "sauce-tunnel": "^2.5.0",
     "stimulus": "^1.0.1",
+    "style-loader": "^0.21.0",
     "turbolinks": "^5.1.1",
     "url-loader": "^1.0.1",
     "webpack": "3",
